--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,22 @@ main {
 		color: #333;
 		margin-bottom: 70px;
 	}
+	.trafficToggle {
+		display: inline-block;
+		padding: 5px 10px;
+		border: none;
+		background-image: linear-gradient(45deg, #49e4ff, #00c3ff);
+		box-shadow: 10px 10px 20px, rgba(73, 228, 255, 0.5);
+		margin-bottom: 50px;
+		border-radius: 3px;
+		font: 900 0.6rem/1 "raleway";
+		color: #fff;
+
+		&.on {
+			background-image: linear-gradient(45deg, #f720a5, #ff0400);
+		}
+		cursor: pointer;
+	}
 	#map {
 		width: 100%;
 		height: 60vh;
