--- a/css/style.css
+++ b/css/style.css
@@ -32,18 +32,19 @@ main h1 {
 }
 main .trafficToggle {
   display: inline-block;
-  padding: 5px 10px;
+  padding: 10px 16px;
   border: none;
   background-image: linear-gradient(45deg, #49e4ff, #00c3ff);
   box-shadow: 10px 10px 20px, rgba(73, 228, 255, 0.5);
   margin-bottom: 50px;
   border-radius: 3px;
-  font: 900 0.6rem/1 "raleway";
+  font: 900 0.8rem/1 "raleway";
   color: #fff;
   cursor: pointer;
 }
 main .trafficToggle.on {
   background-image: linear-gradient(45deg, #f720a5, #ff0400);
+  box-shadow: 10px 10px 20px rgba(240, 73, 255, 0.5);
 }
 main #map {
   width: 100%;
