--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,9 +26,16 @@ main {
 			box-shadow: 10px 10px 20px rgba(240, 73, 255, 0.5);
 		}
 	}
+
 	#map {
 		width: 100%;
 		height: 60vh;
 		background: #000;
+	}
+	#view {
+		width: 100%;
+		height: 60vh;
+		background: #000;
+		margin-bottom: 30px;
 	}
 }
