--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ main h1 {
   color: #333;
   margin-bottom: 70px;
 }
-main .trafficToggle {
+main .trafficToggle,
+main .viewToggle {
   display: inline-block;
   padding: 10px 16px;
   border: none;
@@ -42,20 +43,30 @@ main .trafficToggle {
   color: #fff;
   cursor: pointer;
 }
-main .trafficToggle.on {
+main .trafficToggle.on,
+main .viewToggle.on {
   background-image: linear-gradient(45deg, #f720a5, #ff0400);
   box-shadow: 10px 10px 20px rgba(240, 73, 255, 0.5);
 }
-main #map {
-  width: 100%;
-  height: 60vh;
-  background: #000;
-}
-main #view {
+main .frame {
   width: 100%;
   height: 60vh;
   background: #000;
   margin-bottom: 30px;
+  position: relative;
+}
+main .frame figure {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+  z-index: 1;
+}
+main .frame figure.on {
+  opacity: 1;
+  z-index: 2;
 }
 
 /*# sourceMappingURL=style.css.map */
