--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,8 @@ main {
 		color: #333;
 		margin-bottom: 70px;
 	}
-	.trafficToggle {
+	.trafficToggle,
+	.viewToggle {
 		display: inline-block;
 		padding: 10px 16px;
 		border: none;
@@ -26,16 +27,37 @@ main {
 			box-shadow: 10px 10px 20px rgba(240, 73, 255, 0.5);
 		}
 	}
-
-	#map {
-		width: 100%;
-		height: 60vh;
-		background: #000;
-	}
-	#view {
+	.frame {
 		width: 100%;
 		height: 60vh;
 		background: #000;
 		margin-bottom: 30px;
+		position: relative;
+
+		figure {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			opacity: 0;
+			z-index: 1;
+
+			&.on {
+				opacity: 1;
+				z-index: 2;
+			}
+		}
 	}
+	// #map {
+	// 	width: 100%;
+	// 	height: 60vh;
+	// 	background: #000;
+	// }
+	// #view {
+	// 	width: 100%;
+	// 	height: 60vh;
+	// 	background: #000;
+	// 	margin-bottom: 30px;
+	// }
 }
